--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
-    <section class="board">
-        <div class="board-item"></div>
-        <div class="board-item"></div>
-        <div class="board-item"></div>
-        <div class="board-item"></div>
-        <div class="board-item"></div>
-        <div class="board-item"></div>
-        <div class="board-item"></div>
-        <div class="board-item"></div>
-        <div class="board-item"></div>
-    </section>
-    
+    <div class="wrapper">
+        <section class="board">
+            <div class="board-item"></div>
+            <div class="board-item"></div>
+            <div class="board-item"></div>
+            <div class="board-item"></div>
+            <div class="board-item"></div>
+            <div class="board-item"></div>
+            <div class="board-item"></div>
+            <div class="board-item"></div>
+            <div class="board-item"></div>
+        </section>
+        <button>Reset</button>
+    </div>
     <script src="src/script.js"></script>
 </body>
 </html>
