ADD: Reset button styles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="board-item"></div>
             <div class="board-item"></div>
         </section>
-        <button>Reset</button>
+        <button class="reset-button">Reset</button>
     </div>
     <script src="src/script.js"></script>
 </body>
