--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <div class="wrapper">
         <section class="board">
-            <div class="board-item"></div>
-            <div class="board-item"></div>
-            <div class="board-item"></div>
-            <div class="board-item"></div>
-            <div class="board-item"></div>
-            <div class="board-item"></div>
-            <div class="board-item"></div>
-            <div class="board-item"></div>
-            <div class="board-item"></div>
+            <div class="board-item" data-pos="0"></div>
+            <div class="board-item" data-pos="1"></div>
+            <div class="board-item" data-pos="2"></div>
+            <div class="board-item" data-pos="3"></div>
+            <div class="board-item" data-pos="4"></div>
+            <div class="board-item" data-pos="5"></div>
+            <div class="board-item" data-pos="6"></div>
+            <div class="board-item" data-pos="7"></div>
+            <div class="board-item" data-pos="8"></div>
         </section>
         <button class="reset-button">Reset</button>
     </div>
