ADD: Alert paragraph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <p class="panel"></p>
         <section class="board">
             <div class="board-item" data-pos="0"></div>
             <div class="board-item" data-pos="1"></div>
